@@ -1,6 +1,6 @@
 dnl YAZ Toolkit, Index Data 1994-2002
 dnl See the file LICENSE for details.
-dnl $Id: configure.in,v 1.96 2002-11-26 13:42:35 adam Exp $
+dnl $Id: configure.in,v 1.97 2002-11-29 11:53:55 adam Exp $
 AC_INIT(include/yaz/yaz-version.h)
 AM_INIT_AUTOMAKE(yaz, 1.9.2)
 dnl
@@ -320,11 +320,6 @@ AC_SUBST(YAZ_BUILD_ROOT)
 YAZ_SRC_ROOT=`cd ${srcdir}; pwd`
 YAZ_BUILD_ROOT=`pwd`
 dnl
-if test -f ${srcdir}/lib/yaz-config.in; then
-	rm ${srcdir}/lib/yaz-config.in
-fi
-sed s%yaz_echo_source=yes%yaz_echo_source=no%g < ${srcdir}/yaz-config.in >${srcdir}/lib/yaz-config.in
-dnl
 dnl ------ Makefiles
 dnl
 AC_OUTPUT([
@@ -352,4 +347,4 @@ doc/yazprint.dsl
 doc/tkl.xsl
 yaz-config
 lib/yaz-config
-],[chmod +x yaz-config lib/yaz-config])
+],[sed s%yaz_echo_source=yes%yaz_echo_source=no%g < yaz-config > lib/yaz-config && chmod +x yaz-config lib/yaz-config])
